# Aspire-Full

./: .copilotignore  .dockerignore  .editorconfig  .flake8  .gitignore  .pycodestyle  .pylintrc  Aspire-Full.AI.slnx  Aspire-Full.Core.slnx  Aspire-Full.Infra.slnx  Aspire-Full.Tests.slnx  Aspire-Full.slnf  Aspire-Full.slnx  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  NuGet.config  README.md  build.ps1  docker-bake.hcl  docker-compose.nvidia.yml  force_move_web.py  global.json  llms.txt  logging.serilog.yaml  move_files.py  mypy.ini  pyrightconfig.json  pytest.ini  spec-kit.sln  tests.runsettings  update_csprojs.py  update_slnx.py
.aspire/: settings.json
AI/Aspire-Full.Python/python-agents/: .env  .pylintrc  .python-version  Dockerfile.agent  Dockerfile.playwright  README.md  check_agents.py  check_env.py  docker-compose.tensor.yml  mypy.ini  pyproject.toml  pyrightconfig.json  python-deps.config.yaml
AI/Aspire-Full.Python/python-agents/docs/: vector_cache.md
AI/Aspire-Full.Python/python-agents/scripts/: Invoke-CacheManagement.ps1  Invoke-PythonScript.ps1  abstract_dependency_report.py  download_models.py  generate_dependency_report.py  run_agent.ps1  vector_cache.py
AI/Aspire-Full.Python/python-agents/src/aspire_agents/: __init__.py  _kwargs.py  _typing.py  automation.py  cli.py  compute.py  config.py  core.py  gpu.py  guardrails.py  kernel.py  kwargs.py  runner.py  subagent.py
AI/Aspire-Full.Python/python-agents/src/aspire_agents/_vendor/: __init__.py  _agents.py  _ctypes.py  _docker_model_runner.py  _enums.py  _factory.py  _openai.py  _profiler.py  _pytest.py  _qdrant.py  _redis.py  _safetensors.py  _threading.py  _torch.py  _transformers.py
AI/Aspire-Full.Python/python-agents/src/aspire_agents/examples/: __init__.py
AI/Aspire-Full.Python/python-agents/src/aspire_agents/examples/agent_patterns/: README.md  agents_as_tools.py  agents_as_tools_conditional.py  deterministic.py  forcing_tool_use.py  input_guardrails.py  llm_as_a_judge.py  output_guardrails.py  parallelization.py  routing.py  streaming_guardrails.py
AI/Aspire-Full.Python/python-agents/src/aspire_agents/examples/basic/: agent_lifecycle_example.py  dynamic_system_prompt.py  hello_world.py  hello_world_gpt_5.py  hello_world_gpt_oss.py  hello_world_jupyter.ipynb  image_tool_output.py  lifecycle_example.py  local_file.py  local_image.py  non_strict_output_type.py  previous_response_id.py  prompt_template.py  remote_image.py  remote_pdf.py  stream_function_call_args.py  stream_items.py  stream_text.py  tool_guardrails.py  tools.py  usage_tracking.py
AI/Aspire-Full.Python/python-agents/src/aspire_agents/examples/customer_service/: main.py
AI/Aspire-Full.Python/python-agents/src/aspire_agents/examples/financial_research_agent/: main.py  manager.py
AI/Aspire-Full.Python/python-agents/tests/: __init__.py  conftest.py  test_config.py
AI/Aspire-Full.Tensor/Native/: CMakeLists.txt  NativeMethods.cs
AI/Aspire-Full.Tensor/Native/include/: tensor_ops.h
Aspire-Full.Native/: Aspire-Full.Native.csproj  CMakeLists.txt  Dockerfile  Placeholder.cs  build.bat  tensor_ops.cu
Aspire-Full.Native/include/: tensor_ops.h
Aspire-Full.Native/src/: cuda_stubs.h  tensor_ops.cpp  tensor_ops.cu
Aspire-Full.Python/python-agents/: .pylintrc  Dockerfile.agent  Dockerfile.tensor  check_agents.py  check_env.py  check_gpu.py  check_realtime.py  docker-compose.tensor.yml  pyproject.toml
Aspire-Full.Python/python-agents/scripts/: download_models.py
Aspire-Full.Python/python-agents/src/aspire_agents/: compute.py  config.py  core.py  gpu.py  guardrails.py  runner.py
Aspire-Full.Python/python-agents/src/aspire_agents/examples/agent_patterns/: agents_as_tools.py  agents_as_tools_conditional.py  deterministic.py  forcing_tool_use.py  input_guardrails.py  llm_as_a_judge.py  output_guardrails.py  parallelization.py  routing.py  streaming_guardrails.py
Aspire-Full.Python/python-agents/src/aspire_agents/examples/basic/: agent_lifecycle_example.py  dynamic_system_prompt.py  hello_world.py  hello_world_gpt_5.py  hello_world_gpt_oss.py  image_tool_output.py  lifecycle_example.py  local_file.py  local_image.py  non_strict_output_type.py  previous_response_id.py  prompt_template.py  remote_image.py  remote_pdf.py  stream_function_call_args.py  stream_items.py  stream_text.py  tool_guardrails.py  tools.py  usage_tracking.py
Aspire-Full.Python/python-agents/src/aspire_agents/examples/memory/: postgres_session_example.py
Aspire-Full.Python/python-agents/src/aspire_agents/examples/model_providers/: README.md
Aspire-Full.Python/python-agents/src/aspire_agents/examples/reasoning_content/: gpt_oss_stream.py  main.py
Aspire-Full.Python/python-agents/src/aspire_agents/examples/research_bot/: main.py
Aspire-Full.Python/python-agents/src/aspire_agents/examples/tools/: code_interpreter.py  computer_use.py  file_search.py  image_generator.py  local_shell.py  web_search.py  web_search_filters.py
Aspire-Full.Python/python-agents/tests/: test_config.py
Aspire-Full.Tensor/Native/: CMakeLists.txt  NativeMethods.cs
Aspire-Full.Tensor/Native/include/: tensor_ops.h
Aspire-Full.Tensor/Native/src/: cuda_stubs.h  tensor_ops.cpp
python-agents/: .python-version  README.md  pyproject.toml
python-agents/src/aspire_agents/: __init__.py  cli.py  config.py  gpu.py  kernel.py  runner.py
python-agents/src/aspire_agents/examples/financial_research_agent/: README.md
python-agents/src/aspire_agents/examples/mcp/git_example/: README.md
python-agents/src/aspire_agents/examples/mcp/prompt_server/: README.md
python-agents/src/aspire_agents/examples/mcp/streamablehttp_example/: README.md
python-agents/src/aspire_agents/examples/realtime/twilio_sip/: README.md
python-agents/src/aspire_agents/examples/research_bot/sample_outputs/: product_recs.md
python-agents/src/aspire_agents/examples/tools/: computer_use.py
python-agents/src/aspire_agents/examples/voice/static/: README.md
python-agents/src/aspire_agents/examples/voice/streamed/: my_workflow.py
python-agents/tests/: conftest.py  test_config.py
(+910 files in other folders)
