[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "aspire-agents"
version = "0.1.0"
description = "Semantic Kernel based agents for the Aspire workspace"
readme = "README.md"
requires-python = ">=3.14"
authors = [{ name = "Aspire Maintainers" }]
dependencies = [
    "openai>=1.51.0",
    "typer>=0.12.5",
    "rich>=13.8.0",
    "pydantic>=2.12.5",
    "PyYAML>=6.0.2",
    "httpx>=0.27.2",
    "tenacity>=9.0.0",
    "uvloop>=0.20.0; platform_system != 'Windows'",
    "torch>=2.5.1",
    "openai-agents>=0.1.0",
    "mcp==1.10.1",
    "websockets>=12.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "python-dotenv>=1.0.0",
    "sounddevice>=0.5.0",
    "textual>=0.70.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.3",
    "mypy>=1.13.0",
]
tracing = [
    "opentelemetry-sdk==1.34.1",
    "opentelemetry-exporter-otlp-proto-http==1.34.1",
    "opentelemetry-instrumentation-openai-v2==2.1b0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
]

[project.scripts]
aspire-agents = "aspire_agents.cli:app"

[tool.uv]
managed = true
package = true

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.14"
files = "src"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
mypy_path = "src"
ignore_missing_imports = true


[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
asyncio_mode = "auto"
