[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "aspire-agents"
version = "0.1.0"
description = "Thread-safe AI agents with Tensor Core compute for Python 3.15+ free-threaded runtime"
readme = "README.md"
requires-python = ">=3.15"
authors = [{ name = "Aspire Maintainers" }]
keywords = ["agents", "ai", "tensor", "gpu", "free-threaded", "python-3.15"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.15",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "openai>=1.51.0",
    "typer>=0.12.5",
    "rich>=13.8.0",
    "pydantic>=2.12.5",
    "PyYAML>=6.0.2",
    "httpx>=0.27.2",
    "tenacity>=9.0.0",
    "uvloop>=0.20.0; platform_system != 'Windows'",
    "torch>=2.5.1",
    "transformers>=4.37.0",
    "openai-agents[dapr]>=0.1.0",
    "mcp>=1.10.1",
    "websockets>=12.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "python-dotenv>=1.0.0",
    "sounddevice>=0.5.0",
    "textual>=0.70.0",
    "requests>=2.31.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "playwright>=1.48.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pyright>=1.1.407",
    "mypy>=1.13.0",
    "types-requests>=2.31.0",
    "types-PyYAML>=6.0.12",
]
tracing = [
    "opentelemetry-sdk>=1.34.1",
    "opentelemetry-exporter-otlp-proto-http>=1.34.1",
    "opentelemetry-instrumentation-openai-v2>=2.1b0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
]

[project.scripts]
aspire-agents = "aspire_agents.cli:app"

[tool.uv]
managed = true
package = true
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
name = "pytorch-nightly"
url = "https://download.pytorch.org/whl/nightly/cu126"
explicit = false

# =============================================================================
# Microsoft Pyright Configuration (Python 3.15 Free-Threaded)
# =============================================================================
# Uses Microsoft's official type checker for strict Python analysis
# PEP 803: Stable ABI for Free-Threaded Builds (abi3t wheel tag)
# =============================================================================
[tool.pyright]
pythonVersion = "3.15"
pythonPlatform = "All"
typeCheckingMode = "strict"
include = ["src"]
exclude = [
    "**/__pycache__",
    "**/.venv",
    "**/dist",
    "**/build",
    "**/*.egg-info",
]

# Strict inference settings
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
analyzeUnannotatedFunctions = true
strictParameterNoneValue = true
deprecateTypingAliases = true
enableReachabilityAnalysis = true
disableBytesTypePromotions = true

# Error reporting (strict mode)
reportMissingImports = "error"
reportMissingTypeStubs = "warning"
reportMissingModuleSource = "warning"
reportInvalidTypeForm = "error"
reportUndefinedVariable = "error"
reportGeneralTypeIssues = "error"
reportPropertyTypeMismatch = "error"
reportFunctionMemberAccess = "error"
reportImportCycles = "warning"
reportUnusedImport = "error"
reportUnusedClass = "error"
reportUnusedFunction = "error"
reportUnusedVariable = "error"
reportDuplicateImport = "error"
reportWildcardImportFromLibrary = "error"
reportPrivateUsage = "warning"
reportPrivateImportUsage = "error"
reportConstantRedefinition = "error"
reportDeprecated = "warning"
reportIncompatibleMethodOverride = "error"
reportIncompatibleVariableOverride = "error"
reportInconsistentConstructor = "error"
reportMissingSuperCall = "warning"
reportUninitializedInstanceVariable = "warning"
reportUnknownParameterType = "error"
reportUnknownArgumentType = "error"
reportUnknownLambdaType = "error"
reportUnknownVariableType = "error"
reportUnknownMemberType = "error"
reportMissingParameterType = "error"
reportMissingTypeArgument = "error"
reportUnnecessaryCast = "error"
reportUnnecessaryComparison = "error"
reportUnnecessaryContains = "error"
reportMatchNotExhaustive = "error"
reportImplicitOverride = "warning"

[tool.mypy]
python_version = "3.15"
files = "src"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
mypy_path = "src"
ignore_missing_imports = true
cache_dir = ".cache/mypy"


[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "types-pyyaml>=6.0.12.20250915",
    "types-requests>=2.32.4.20250913",
]
